#3 VIDEO CALL ~ 3-2 카메라, 마이크 기능 추가, Call Controls

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,11 @@ html(lang="en")
     header
       h1 Noom 
     main 
+      div#myStream
+        video#myFace(autoplay, playsinline, width="400", height="400")
+        button#mute Mute
+        button#camera Turn Camera Off
+        select#cameras
+          //- option(value="device") Face Camera
     script(src="/socket.io/socket.io.js") 
     script(src="/public/js/app.js") 
